removed extras and added debug

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,8 @@
-assets/components/*
-.tmp/
-.vagrant/
-.sass-cache/
-www/
-node_modules/
+npm-debug.log
+node_modules
 .DS_Store
 !.gitkeep
 logs/
 test/karma
-test/reports/
-
-api/controllers/*
-api/models/*
-views/*
+test/reports
+test/coverage
