switch mock sol to create new instand and attmpted to test the Http module

--- a/test/specs/.jshintrc
+++ b/test/specs/.jshintrc
@@ -16,6 +16,6 @@
     "beforeEach" : false,
     "expect"     : false,
     "it"         : false,
-    "mockSol"    : false
+    "SolHelper"  : false
   }
 }
