--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "winston": "^0.8.1"
   },
   "devDependencies": {
+    "coveralls": "^2.11.2",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-watch": "~0.5.3",
@@ -30,7 +31,8 @@
     "include-all": "~0.1.3"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "coverage" : "grunt test && cat ./test/coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "main": "Sol.js",
   "repository": {
