--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "coveralls": "^2.11.2",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-jasmine-node-coverage": "git://github.com/isuttell/grunt-jasmine-node-coverage",
     "grunt-jscs": "^0.8.1",
     "include-all": "~0.1.3"
   },
   "scripts": {
     "test": "grunt test",
-    "coverage" : "grunt test && cat ./test/coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
+    "coverage": "grunt test && cat ./test/coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "main": "Sol.js",
   "repository": {
