--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: node_js
 node_js:
+  - 0.8
   - 0.10
+  - 0.11
+before_install:
+  - npm update npm -g # For "^" dependency compatiblibty in NodeJS 0.8
 after_script: NODE_ENV=test cat ./test/coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
