added codeclimate coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,10 @@
 language: node_js
 node_js:
   - 0.10
-after_script: NODE_ENV=test cat ./test/coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+  - 0.11
+addons:
+  code_climate:
+    repo_token: 1a54d79c17d43fd0e69698e33925890eaa2dae3f985ab0cbe2cf042aa3a5034e
+after_script:
+  - NODE_ENV=test cat ./test/coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+  - cat ./tests/coverage/lcov/lcov.info | ./node_modules/codeclimate-test-reporter/bin/codeclimate.js
