--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "winston": "^0.8.1"
   },
   "devDependencies": {
+    "codeclimate-test-reporter": "0.0.4",
     "coveralls": "^2.11.2",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-jshint": "^0.10.0",
