--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "codeclimate-test-reporter": "0.0.4",
     "coveralls": "^2.11.2",
     "grunt-cli": "^0.1.13",
-    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-jshint": "^0.11.1",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-jasmine-node": "^0.3.0",
     "grunt-jasmine-node-coverage": "git://github.com/isuttell/grunt-jasmine-node-coverage",
-    "grunt-jscs": "^0.8.1",
-    "include-all": "~0.1.3"
+    "grunt-jscs": "^1.6.0",
+    "include-all": "~0.1.3",
+    "jit-grunt": "^0.9.1"
   },
   "scripts": {
     "test": "grunt test",
